--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -64,3 +64,10 @@
         margin-bottom: 0px;
     }
 }
+
+@media (max-width: 1023px) {
+    .about {
+        min-height: auto;
+        padding: 80px 24px;
+    }
+}
