--- a/src/pages/WhyBikeDex.css
+++ b/src/pages/WhyBikeDex.css
@@ -57,8 +57,10 @@
     }
 }
 
-@media (min-width: 769px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
     .whybikedex {
-        padding: 0px;
+        min-height: auto;
+        padding: 80px 24px;
+        box-sizing: border-box;
     }
 }
